# identity-platform

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
.github/workflows/: build-broker.yaml  build-idp.yaml  build-sdk.yaml  build-wallet.yaml  deploy-idp.yaml  publish-sdk.yaml
broker/: README.md  e2e_test.go
broker/cmd/broker/: main.go
broker/deploy/: cloudrun.yaml  relay-nginx.conf
broker/internal/appattest/: handler.go
broker/internal/config/: config.go
broker/internal/oauth/: handler.go
broker/internal/relay/: descriptor.go  handlers.go
broker/internal/tokens/: issuer.go
docs/: setup-testflight.md
idp/: Dockerfile  go.mod  go.sum
idp/cmd/idp/: main.go
idp/deploy/: Caddyfile  docker-compose.yml  idp-nginx.conf  privasys-idp.service
idp/deploy/enclave-os-virtual/: README.md  manifest.yaml
idp/e2e/: authorize.spec.ts  package-lock.json  package.json  playwright.config.ts  recovery.spec.ts
idp/internal/admin/: admin.go  approles.go  approles_test.go  notify.go  notify_test.go
idp/internal/attributes/: attributes.go  attributes_test.go  canonical-attributes.json
idp/internal/config/: config.go
sdk/: package-lock.json  package.json
sdk/scripts/: kat.mjs
sdk/src/: client.ts  enclave-session.ts  frame-client.ts  frame-host.ts  iife.ts  index.ts  qr.ts  react.ts  session.ts  types.ts  ui.ts  webauthn.ts
shared/: canonical-attributes.json
wallet/: .env.example  .gitignore  .npmrc  app.config.ts  eas.json  jest.config.js  metro.config.js  package.json
wallet/modules/native-ratls/android/src/main/jni/: CMakeLists.txt  ratls_jni.c
(+165 files in other folders)
